Add half sheet apk to nearby
Test: start activity show avaiable device to pairing click connect to
start pairing process pair success
Bug: 202335820

Change-Id: I454527f11a396ecf8acd55649dc740ed2d09c6fc

--- a/nearby/halfsheet/res/values/strings.xml
+++ b/nearby/halfsheet/res/values/strings.xml
@@ -16,4 +16,9 @@
 
 <resources>
     <string name="app_name">Nearby HalfSheet Dialog</string>
+    <string name="common_done" description="After pairing process finish button text to dismiss halfsheet">Done</string>
+    <string name="common_save">Save</string>
+    <string name="common_connect" description="Button text to start connecting process">Connect</string>
+    <string name="fast_pair_app_launch_button" description="String on app launch half sheet button.">Set up</string>
+
 </resources>
